# Nielsen-Excel-Historic-Pulling

nielsen-excel-automate-feature-historical-pull/: Makefile  README.md  config.py  constants.py  errors.py  excel_utils.py  gdrive.py  log.py  main.py  package-lock.json  package.json  pyproject.toml  ruff.toml
nielsen-excel-automate-feature-historical-pull/scripts/: refreshpath-exec.ps1  setup-fnm-profile.ps1
